--- a/desserts.tex
+++ b/desserts.tex
@@ -42,7 +42,7 @@ If peaches are hard to peel, loosen skins in boiling water.
 Serve alone or with whipped cream or ice cream.
 \end{recipe}
 
-\begin{recipe}{Tart Panna Cotta}{\vegetarian\totaltime{4 h 20 min}}
+\begin{recipe}{Tart Panna Cotta}{\totaltime{4 h 20 min}}
 \begin{ingredients}
 1/2 envelope gelatin, just over 1 tsp
 3 tbsp water
