--- a/joulu.tex
+++ b/joulu.tex
@@ -1,6 +1,6 @@
 \BeginCategoryTOC{Joulu}
 
-\begin{recipe}{Extra-Light and Foamy Eggnog}{\vegetarian\totaltime{15 min}}
+\begin{recipe}{Foamy Eggnog}{\vegetarian\totaltime{15 min}}
 \begin{ingredients}
 4 eggs, separated
 70 g sugar
