--- a/meat_and_poultry_mains.tex
+++ b/meat_and_poultry_mains.tex
@@ -34,13 +34,14 @@ with plain sausage: sage, red pepper, marjoram, thyme
 \nextcolumn
 Serves 4
 \begin{steps}
-    \item Brown sausage (and mushrooms if using) in oil over high heat
+    \item Brown sausage and mushrooms (with spices, if using) in oil over high heat
     \item Reduce heat to medium
-    \item Stir in flour (and spices if using) and cook for 1 minute
+    \item Stir in flour and cook for 1 minute
     \item Add milk and stir constantly until smooth
     \item Cook stirring frequently until thickened
     \item Season and adjust consistency with milk
 \end{steps}
+Serve with \reciperef{Cream Biscuits}.
 \end{recipe}
 
 \begin{denserecipe}{Coq au Vin}{\preheat{\celsius{180}}\totaltime{2 h 30 min}}
@@ -167,7 +168,7 @@ Serves 4
 \end{steps}
 \end{recipe}
 
-\begin{denserecipe}{Turkey Meatloaf with Zucchini}{\preheat{\celsius{180}}\totaltime{1 h 15 min}}
+\begin{denserecipe}{Turkey and Zucchini Meatloaf}{\preheat{\celsius{180}}\totaltime{1 h 15 min}}
 \begin{ingredients}
 1 lb ground turkey
 3/4 cup grated zucchini, squeezed dry
@@ -243,7 +244,7 @@ Serves 2
 \end{steps}
 \end{denserecipe}
 
-\begin{denserecipe}{Oven-to-Pan Velvet Chicken}{\preheat{\celsius{135}}\totaltime{1 h 15 min}}
+\begin{denserecipe}{Velveted Chicken Breasts}{\preheat{\celsius{135}}\totaltime{1 h 15 min}}
 \begin{ingredients}
 4 boneless, skinless \ibreak chicken breasts
 2 tsp kosher salt
@@ -257,7 +258,7 @@ Serves 2
 Serves 4
 \begin{steps}
     \item Poke breasts with fork and sprinkle with salt
-    \item Bake, covered with foil, skinned side down at \celsius{135} until \celsius{60}, about 30 minutes
+    \item Bake, covered with foil, smooth side down at \celsius{135} until \celsius{60}, about 30 minutes
     \item Mix butter, flour, cornstarch, and pepper
     \item Pat dry, brush flat side with half of batter and brown in oil over high heat, 3 to 4 minutes
     \item Brush with remaining batter, flip and cook over medium until \celsius{68}, 3 to 4 minutes more
