--- a/pasta_and_noodles.tex
+++ b/pasta_and_noodles.tex
@@ -97,7 +97,7 @@ Serves 2
 \end{steps}
 \end{recipe}
 
-\begin{recipe}{Creamy Lemony Pasta}{\totaltime{15 min}}
+\begin{recipe}{Creamy Lemony Pasta}{\vegetarian\totaltime{15 min}}
 \begin{ingredients}
 1 lb short curly pasta
 kosher salt
