--- a/patisserie.tex
+++ b/patisserie.tex
@@ -180,7 +180,7 @@ Makes 8 to 10 small pancakes
 Serve with \reciperef{Blueberry Syrup}.
 \end{denserecipe}
 
-\begin{recipe}{Lemon--Olive Oil Tart}{\vegetarian\preheat{\celsius{180}}\totaltime{1 h 15 min}}
+\begin{recipe}{Lemon and Olive Oil Tart}{\vegetarian\preheat{\celsius{180}}\totaltime{1 h 15 min}}
 \begin{ingredients}
 \reciperef{Olive Oil Tart Shell}
 1 cup sugar
