--- a/porridges_and_grain_bowls.tex
+++ b/porridges_and_grain_bowls.tex
@@ -19,7 +19,7 @@ Serves 2
 \end{steps}
 \end{recipe}
 
-\begin{denserecipe}{Pressure Cooker Miso Risotto}{\vegetarian\totaltime{25 min}}
+\begin{denserecipe}{Miso Risotto}{\totaltime{25 min}}
 \begin{ingredients}
 6 tbsp olive oil
 1 shallot, minced
