--- a/salads_and_cold_preparations.tex
+++ b/salads_and_cold_preparations.tex
@@ -55,7 +55,7 @@ Good herbs: tarragon, parsley, dill and chives.
 \item Add cooled baked salmon and mix thoroughly
 \item Chill for at least 4 hours
 \end{steps}
-Use in sandwiches, profiteroles or \reciperef{Crepes}. 
+Use in sandwiches, \reciperef{Choux Pastry} puffs or \reciperef{Crepes}. 
 \end{denserecipe}
 
 \begin{recipe}{Snap Pea and Chicken Salad}{\totaltime{40 min}}
