--- a/sauces_and_marinades.tex
+++ b/sauces_and_marinades.tex
@@ -71,7 +71,7 @@ Omit with fatty base
 \end{steps}
 \end{densecard}
 
-\begin{recipe}{Hollandaise Sauce}{\vegetarian\totaltime{10 min}}
+\begin{recipe}{Hollandaise}{\vegetarian\totaltime{10 min}}
 \begin{ingredients}
 2 egg yolks
 1 tbsp lemon juice
