--- a/soups_and_stews.tex
+++ b/soups_and_stews.tex
@@ -128,7 +128,7 @@ Serves 2 to 3
 Garnish with herbs and more olive oil.
 \end{denserecipe}
 
-\begin{recipe}{Lemony Asparagus Soup}{\vegetarian\totaltime{15 min}}
+\begin{recipe}{Lemony Asparagus Soup}{\totaltime{15 min}}
 \begin{ingredients}
 1 bunch asparagus, chopped
 2 shallots, chopped
@@ -152,7 +152,7 @@ Serves 4
 \end{steps}
 \end{recipe}
 
-\begin{recipe}{Vichyssoise}{\vegetarian\totaltime{45 min}}
+\begin{recipe}{Vichyssoise}{\totaltime{45 min}}
 \begin{ingredients}
 2 tbsp unsalted butter
 2 large leeks
@@ -201,7 +201,7 @@ Serves 8
 \end{steps}
 \end{denserecipe}
 
-\begin{recipe}{Pressure Cooker Black Beans}{\totaltime{60 min}}
+\begin{recipe}{Black Beans with Chorizo}{\totaltime{60 min}}
 \begin{ingredients}
 1 tbsp oil
 2-3 chorizos or other cured sausages, \ibreak chopped
@@ -312,7 +312,7 @@ Serves 6
 \end{steps}
 \end{denserecipe}
 
-\begin{denserecipe}{Chicken and Lentil Soup}{\vegetarian\totaltime{1 h}}
+\begin{denserecipe}{Chicken and Lentil Soup}{\totaltime{1 h}}
 \begin{ingredients}
 3 tbsp olive oil
 2 large onions, sliced
