--- a/vegetables_and_sides.tex
+++ b/vegetables_and_sides.tex
@@ -24,7 +24,7 @@ Serves 6
 \end{steps}
 \end{recipe}
 
-\begin{denserecipe}{Healthy Imam Bayildi}{\vegetarian\preheat{\celsius{190}}\totaltime{1 h 20 min}}
+\begin{denserecipe}{Layered Imam Bayildi}{\vegetarian\preheat{\celsius{190}}\totaltime{1 h 20 min}}
 \begin{ingredients}
 2 large globe eggplants
 2 tbsp olive oil
@@ -53,26 +53,7 @@ Serves 4
 \end{steps}
 \end{denserecipe}
 
-\begin{recipe}{Pressure Cooker Rice and Beans}{\vegetarian\totaltime{30 min}}
-\begin{ingredients}
-2 tbsp oil
-1 onion, chopped
-1 1/4 cups chicken stock
-1 tsp salt
-1 cup rice
-15 oz canned beans
-\end{ingredients}
-\nextcolumn
-Serves 4
-\begin{steps}
-    \item Saute onion until soft
-    \item Add stock, salt, rice and beans
-    \item Cook on high for 3 minutes, natural release 15 minutes
-    \item Fluff
-\end{steps}
-\end{recipe}
-
-\begin{recipe}{Mediterranean Roast Cauliflower}{\vegetarian\preheat{\celsius{260}}\totaltime{40 min}}
+\begin{recipe}{Cauliflower Agrodolce}{\vegetarian\preheat{\celsius{260}}\totaltime{40 min}}
 \begin{ingredients}
 1 cauliflower
 3+3 tbsp olive oil
@@ -129,7 +110,7 @@ Serves 8
 1 onion, finely diced
 2 cloves garlic, minced
 1 carrot, finely diced
-2 1/4 cup Le Puy lentils
+2 1/4 cup le puy lentils
 1 tsp thyme
 3 bay leaves
 1 tbsp kosher salt
@@ -235,7 +216,7 @@ Serves 6 to 8
 Serve warm or at room temperature.
 \end{recipe}
 
-\begin{recipe}{Skillet-Roasted Brussels Sprouts}{\vegetarian\totaltime{20 min}}
+\begin{recipe}{Pan-Roasted Brussels Sprouts}{\vegetarian\totaltime{20 min}}
 \begin{ingredients}
 1 lb small brussels sprouts, halved
 5 tbsp olive oil
@@ -283,7 +264,7 @@ Serves 6 to 8
 \end{steps}
 \end{denserecipe}
 
-\begin{denserecipe}{Tender Green Beans in Tomato}{\vegetarian\preheat{\celsius{135}}\totaltime{1 h 30 min}}
+\begin{denserecipe}{Fasolakia}{\vegetarian\preheat{\celsius{135}}\totaltime{1 h 30 min}}
 \begin{ingredients}
 5 tbsp olive oil
 1 onion, chopped
