--- a/breads_and_pancakes.tex
+++ b/breads_and_pancakes.tex
@@ -60,9 +60,10 @@ Serves 2
     \item Cut out biscuits, gather scraps and repeat
     \item Bake in \celsius{200} oven for 12-15 minutes
 \end{steps}
+Serve with \reciperef{Sausage Gravy}.
 \end{recipe}
 
-\begin{recipe}{Crepes}{\totaltime{15 min}}
+\begin{recipe}{Crepes}{\vegetarian\totaltime{15 min}}
 \begin{ingredients}
 1 large eggs
 5/8 cups whole milk
@@ -79,7 +80,9 @@ Makes 4 to 6 large crepes
     \item Add herbs (if using) and pulse to combine
     \item Pour thin layer of batter into buttered pan on medium heat, swirl to spread, cook for 20~s, flip, and cook another 10~s
 \end{steps}
-Fill sweet crepes with sugar and lemon juice, or whipped cream and berries; savory crepes with mushrooms and ricotta, or ham, cheese and fried eggs.
+\ihead{Fillings}\\
+Sweet: sugar lemon\ijoin{}juice whipped\ijoin{}cream jam berries nutella \\
+Savory: \reciperef{Salmon Pate} mushrooms ham cheese fried\ijoin{}eggs asparagus \reciperef{Hollandaise}
 \end{recipe}
 
 \begin{recipe}{Gullichsenin Letut}{\vegetarian\totaltime{1 h 10 min}}
@@ -181,7 +184,7 @@ Serves 4
 \end{steps}
 \end{recipe}
 
-\begin{denserecipe}{Tangzhong Oat and Carrot Rolls}{\vegetarian\preheat{\celsius{190}}\totaltime{2 h}}
+\begin{denserecipe}{Oat and Carrot Rolls}{\vegetarian\preheat{\celsius{190}}\totaltime{2 h}}
 \begin{ingredients}
 35 g + 415 g flour
 170 g + 170 g milk
@@ -205,7 +208,7 @@ Makes enough to fill 2 baking sheets
 \end{steps}
 \end{denserecipe}
 
-\begin{recipe}{Tangzhong Pain de Mie}{\vegetarian\preheat{\celsius{180}}\totaltime{3h 30 min}}
+\begin{recipe}{Pain de Mie}{\vegetarian\preheat{\celsius{180}}\totaltime{3h 30 min}}
 \begin{ingredients}
 \ihead{Tangzhong}
 30 g flour
