--- a/pescatarian_mains.tex
+++ b/pescatarian_mains.tex
@@ -205,7 +205,7 @@ Serves 4
 \end{steps}
 \end{denserecipe}
 
-\begin{denserecipe}{Tomato Egg Drop}{\vegetarian\totaltime{30 min}}
+\begin{denserecipe}{Tomato Egg Drop}{\totaltime{30 min}}
 \begin{ingredients}
 3 large eggs, beaten
 neutral oil
@@ -234,7 +234,7 @@ Serves 2
 Garnish with scallion and serve with white rice.
 \end{denserecipe}
 
-\begin{densecard}{Double-Glazed Salmon}{\preheat{\celsius{150}}\totaltime{50 min}}
+\begin{densecard}{Glazed Salmon}{\preheat{\celsius{150}}\totaltime{50 min}}
 \begin{steps}
     \item Brine 4 salmon fillets in 2 l water, 1/4 cup salt, 1/4 cup sugar, 15 minutes
     \item Combine glaze, whisk until smooth, cook until thick, and set aside 2 tbsp
@@ -275,7 +275,7 @@ Garnish with scallion and serve with white rice.
 \end{paracol}
 \end{densecard}
 
-\begin{recipe}{Crispy Goat Cheese}{\preheat{\celsius{250}}\totaltime{1 h 20 min}}
+\begin{recipe}{Crispy Goat Cheese}{\vegetarian\preheat{\celsius{250}}\totaltime{1 h 20 min}}
 \begin{ingredients}
 200 g panko bread crumbs
 550 g goat cheese
