--- a/retired.tex
+++ b/retired.tex
@@ -328,3 +328,23 @@ Serves 2
 \item Bake at \fahrenheit{350} for 15 to 18 minutes
 \end{steps}
 \end{denserecipe}
+
+% I'd make this sort of thing in a rice cooker now
+\begin{recipe}{Pressure Cooker Rice and Beans}{\totaltime{30 min}}
+\begin{ingredients}
+2 tbsp oil
+1 onion, chopped
+1 1/4 cups chicken stock
+1 tsp salt
+1 cup rice
+15 oz canned beans
+\end{ingredients}
+\nextcolumn
+Serves 4
+\begin{steps}
+    \item Saute onion until soft
+    \item Add stock, salt, rice and beans
+    \item Cook on high for 3 minutes, natural release 15 minutes
+    \item Fluff
+\end{steps}
+\end{recipe}
