--- a/main.tex
+++ b/main.tex
@@ -318,7 +318,7 @@
 
 \newcommand{\tag}[1]{\hspace{1em}#1}
 \newcommand{\symboltag}[2]{\tag{#1\hspace{0.3em}#2}}
-\newcommand{\vegetarian}{\raisebox{-0.08em}{\includegraphics[scale=0.09]{symbols/vegetarian.eps}}}
+\newcommand{\vegetarian}{\tag{\raisebox{-0.08em}{\includegraphics[scale=0.09]{symbols/vegetarian_light.eps}}}}
 \newcommand{\totaltime}[1]{\symboltag{\raisebox{-0.09em}{\small\includegraphics[scale=0.07]{symbols/stopwatch.eps}}}{#1}}
 \newcommand{\preheat}[1]{\symboltag{\raisebox{-0.09em}{\includegraphics[scale=0.09]{symbols/oven.eps}}}{#1}}
 
