--- a/desserts.tex
+++ b/desserts.tex
@@ -197,3 +197,44 @@ Serves 2
     \item Brulee tops with sugar right before serving
 \end{steps}
 \end{denserecipe}
+
+\begin{recipe}{Coffee Jelly}{\totaltime{8 h 15 min}}
+\begin{ingredients}
+100 + 300 ml water
+7 g gelatin, 1 packet or 3 2/3 sheets
+50 g sugar
+1 tsp vanilla extract
+1 tbsp instant \ibreak{}espresso powder
+1 tbsp coffee, orange or chocolate liqueur, optional
+\end{ingredients}
+\nextcolumn
+Serves 4
+\begin{steps}
+    \item Bloom gelatin in 100 ml cold water
+    \item Bring 300 ml water and sugar to boil
+    \item Stir until fully dissolved
+    \item Mix in espresso and vanilla
+    \item Whisk in gelatin and refigerate for 8 hours
+    \item Slice into small cubes and drizzle on liqueur
+\end{steps}
+Serve with \reciperef{Caramel Whipped Cream}, flaky salt and cacao nibs.
+\end{recipe}
+
+\begin{recipe}{Caramel Whipped Cream}{\vegetarian\totaltime{2 h 30 min}}
+\begin{ingredients}
+150 + 50 ml cream
+50 g sugar
+1/8 tsp salt
+\end{ingredients}
+\nextcolumn
+Makes 4 dl
+\begin{steps}
+    \item Microwave 150 ml cream until lukewarm
+    \item Cook sugar and salt over medium without stirring until dark amber, 5 minutes
+    \item Slowly whisk in lukewarm cream
+    \item Remove from heat
+    \item Whisk in remaining cream
+    \item Refrigerate for 2 hours
+    \item Whip to desired consistency
+\end{steps}
+\end{recipe}
