--- a/main.tex
+++ b/main.tex
@@ -31,12 +31,10 @@
 \usepackage{accents}
 \usepackage{xstring}
 
-\hyphenation{car-a-mel-ized}
-
 \usepackage[absolute]{textpos}
 \textblockorigin{0pt}{\paperheight-0.18in}
 
-\hyphenation{slight-ly car-da-mom crush-ed}
+\hyphenation{slight-ly car-da-mom crush-ed es-pres-so car-a-mel-ized}
 
 \makeatletter
 \newcommand*{\shifttext}[2]{%
