--- a/appetizers.tex
+++ b/appetizers.tex
@@ -108,3 +108,23 @@ Makes 50 to 60 wontons
 \item To cook, add to boiling water, bring back to boil, simmer until wontons float and continue simmering for 2 minutes more
 \end{steps}
 \end{denserecipe}
+
+\begin{denserecipe}{Shrimp Cocktail}{\preheat{}\totaltime{}}
+\begin{ingredients}
+2 lb jumbo shrimp
+1 tsp kosher salt
+1/2 tsp baking soda
+\reciperef{Court Buillon} with fennel, ginger, parsley, tarragon and shrimp shells
+\end{ingredients}
+\nextcolumn
+Serves
+\begin{steps}
+    \item Deshell and devein shrimp, reserving shells
+    \item Toss shrimp with salt and baking soda
+    \item Chill for 30 minutes
+    \item Prepare \reciperefplain{Court Buillon}
+    \item Heat shrimp and broth, stirring occasionally, on medium-high to \celsius{65}
+    \item Strain out shrimp and refrigerate thoroughly, initially uncovered in a single layer
+\end{steps}
+Serve with \reciperef{Cocktail Sauce}.
+\end{denserecipe}
