--- a/components.tex
+++ b/components.tex
@@ -97,3 +97,24 @@ Makes 8 cups
     \item Season to taste
 \end{steps}
 \end{recipe}
+
+\begin{denserecipe}{Court Buillon}{\totaltime{30 min}}
+\begin{ingredients}
+1+1 liters water
+2 tbsp kosher salt
+500 ml dry white wine
+1 lemon, juiced
+1 onion, diced
+3 cloves garlic, smashed
+aromatics: celery, carrot, fennel, ginger, etc.
+bouquet garni: parsley, tarragon, dill, etc.
+accents: shrimp shells, porcini, citrus peel, etc.
+\end{ingredients}
+\nextcolumn
+Makes 2 liters
+\begin{steps}
+    \item Gently simmer 1 liter water, salt, wine, lemon juice and all aromatics for 20 minutes
+    \item Strain out solids
+    \item Add 1 liter water
+\end{steps}
+\end{denserecipe}
