--- a/sauces_and_marinades.tex
+++ b/sauces_and_marinades.tex
@@ -322,3 +322,20 @@ Makes 1 cup
     \item Mix in remaining ingredients
 \end{steps}
 \end{recipe}
+
+\begin{recipe}{Cocktail Sauce}{\preheat{}\totaltime{}}
+\begin{ingredients}
+1 dl ketchup
+2 tbsp preserved horseradish
+2-3 tsp lemon juice
+1/2 tsp ground coriander, optional
+1/4 tsp garlic powder, optional
+salt and pepper
+\end{ingredients}
+\nextcolumn
+Makes 1 1/2 dl
+\begin{steps}
+    \item Mix ketchup, horseradish, lemon juice and spices
+    \item Season with salt and pepper
+\end{steps}
+\end{recipe}
