--- a/appetizers.tex
+++ b/appetizers.tex
@@ -109,17 +109,17 @@ Makes 50 to 60 wontons
 \end{steps}
 \end{denserecipe}
 
-\begin{denserecipe}{Shrimp Cocktail}{\preheat{}\totaltime{}}
+\begin{denserecipe}{Shrimp Cocktail}{\totaltime{1 h}}
 \begin{ingredients}
 2 lb jumbo shrimp
 1 tsp kosher salt
 1/2 tsp baking soda
-\reciperef{Court Buillon} with fennel, ginger, parsley, tarragon and shrimp shells
+2 l \reciperef{Court Buillon} with fennel, ginger, parsley, tarragon and shrimp shells
 \end{ingredients}
 \nextcolumn
 Serves
 \begin{steps}
-    \item Deshell and devein shrimp, reserving shells
+    \item Peel and devein shrimp, reserving shells
     \item Toss shrimp with salt and baking soda
     \item Chill for 30 minutes
     \item Prepare \reciperefplain{Court Buillon}
