--- a/sauces_and_marinades.tex
+++ b/sauces_and_marinades.tex
@@ -323,7 +323,7 @@ Makes 1 cup
 \end{steps}
 \end{recipe}
 
-\begin{recipe}{Cocktail Sauce}{\preheat{}\totaltime{}}
+\begin{recipe}{Cocktail Sauce}{\totaltime{5 min}}
 \begin{ingredients}
 1 dl ketchup
 2 tbsp preserved horseradish
