--- a/appetizers.tex
+++ b/appetizers.tex
@@ -114,7 +114,7 @@ Makes 50 to 60 wontons
 2 lb jumbo shrimp
 1 tsp kosher salt
 1/2 tsp baking soda
-2 l \reciperef{Court Buillon} with fennel, ginger, parsley, tarragon and shrimp shells
+\reciperef{Court Buillon} with fennel, ginger, parsley, tarragon and shrimp shells
 \end{ingredients}
 \nextcolumn
 Serves
