--- a/components.tex
+++ b/components.tex
@@ -111,7 +111,7 @@ bouquet garni: parsley, tarragon, dill, etc.
 accents: shrimp shells, porcini, citrus peel, etc.
 \end{ingredients}
 \nextcolumn
-Makes 2 liters
+Makes 2 1/2 liters
 \begin{steps}
     \item Gently simmer 1 liter water, salt, wine, lemon juice and all aromatics for 20 minutes
     \item Strain out solids
