--- a/sauces_and_marinades.tex
+++ b/sauces_and_marinades.tex
@@ -147,10 +147,8 @@ Replace fish sauce with 2 anchovy fillets.
 3 tbsp butter
 1/4 cup flour
 2 cups milk
-2 cups shredded \ibreak cheddar
-white pepper
-nutmeg
-cayenne
+2 cups mix of shredded \ibreak gruyère, cheddar, emmental, parmesan
+spices, such as white pepper, nutmeg, cayenne, miso
 \end{ingredients}
 \nextcolumn
 Yields 3 cups
@@ -160,7 +158,7 @@ Yields 3 cups
     \item Cook until flour is cooked
     \item Whisk in cold milk
     \item Cook, whisking constantly, until thick
-    \item Add cheese and stir until melted
+    \item Add cheeses and stir until melted
     \item Add spices to taste and check for salt
 \end{steps}
 \end{recipe}
