--- a/vegetables_and_sides.tex
+++ b/vegetables_and_sides.tex
@@ -309,3 +309,19 @@ Serves 6
 \item Marinate with olive oil, salt, pepper, and white balsamic vinegar
 \end{steps}
 \end{recipe}
+
+\begin{recipe}{Cauliflower Gratin}{\preheat{\celsius{190}}\totaltime{1 h 15 min}}
+\begin{ingredients}
+2 heads cauliflower
+3 cups \reciperef{Mornay Sauce}
+1/2 cup grated gruyère and parmesan 
+\end{ingredients}
+\nextcolumn
+Serves 6
+\begin{steps}
+    \item Separate cauliflower into florets
+    \item Steam until just tender, 5 minutes
+    \item Combine with \reciperef{Mornay Sauce} in baking dish and top with cheeses
+    \item Bake at \celsius{190} until golden, 12 minutes
+\end{steps}
+\end{recipe}
